@@ -5,7 +5,7 @@
 
 <widget class="GtkWindow" id="baobab_window">
   <property name="visible">True</property>
-  <property name="title" translatable="yes">Disk Usage Analyser</property>
+  <property name="title" translatable="yes">Disk Usage Analyzer</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER</property>
   <property name="modal">False</property>
@@ -37,7 +37,7 @@
 	  <child>
 	    <widget class="GtkMenuItem" id="menuitem1">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">_Analyser</property>
+	      <property name="label" translatable="yes">_Analyzer</property>
 	      <property name="use_underline">True</property>
 
 	      <child>
@@ -1442,7 +1442,7 @@
   <property name="border_width">5</property>
   <property name="height_request">330</property>
   <property name="visible">True</property>
-  <property name="title" translatable="yes">Disk Usage Analyser Preferences</property>
+  <property name="title" translatable="yes">Disk Usage Analyzer Preferences</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">True</property>
