@@ -1,3 +1,10 @@
+2006-07-30  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* data/baobab.desktop.in.in:
+	* data/baobab.glade:
+	Using standard American English in app name
+	(#349191)
+
 2006-07-29  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* pixmaps/baobab.png:
